--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
         <link href="css/ytplayer.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/theme.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/custom.css" rel="stylesheet" type="text/css" media="all" />
-        <link href='https://fonts.googleapis.com/css?family=Lato:300,400%7CRaleway:100,400,300,500,600,700%7COpen+Sans:400,500,600' rel='stylesheet' type='text/css'>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600,700" rel="stylesheet" type="text/css">
-        <link href="css/font-opensans.css" rel="stylesheet" type="text/css">
+
+        <link href="css/font-poppins.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
@@ -68,9 +67,6 @@
 		                                </li>
 		                            </ul>
 		                        </li>
-		                        <li>
-		                            <a href="#delete">Consultants</a>
-		                        </li>
 		                    </ul>		                
 		            </div>
 		        </div>
@@ -88,9 +84,9 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-6">
-							<h1 class="mb0 italic bold">The OKR Resource for Founders</h1>
-							<h5 class="uppercase mb32"><br></h5>
-							<p class="lead mb0">COMPLETE AND CONCISE, FROM ZERO TO ONE</p>
+							<h1 class="mb0 bold">The OKR Resource for Founders</h1>
+							<h5 class="uppercase mb32"><br>The complete and concise guide, from Zero to One</h5>
+							<!-- <p class="lead mb0">The complete and concise guide, from Zero to One</p> -->
 						</div>
 					</div>
 					
