--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		                                        WHAT ARE OKRS</a>
 		                                </li>
 		                                <li>
-		                                    <a href="#delete">OKRS for Startups </a>
+		                                    <a href="/core-and-explore.html">OKRS for Startups </a>
 		                                </li>
 		                            </ul>
 		                        </li><li class="has-dropdown">
