dot the i's and cross the t's

--- a/what-are-okrs.html
+++ b/what-are-okrs.html
@@ -196,8 +196,8 @@
 		        <div class="container">
 		            <div class="row">
 		                <div class="col-sm-12 text-center">
-		                    <h3 class="mb0 inline-block p32 p0-xs">Up next: OKRs at Startups: Core and Explore</h3>
-		                    <a class="btn btn-lg btn-white mb8 mt-xs-24" href="#">READ Now</a>
+		                    <h3 class="mb0 inline-block p32 p0-xs">Up next: OKRs at Startups - Core and Explore</h3>
+		                    <a class="btn btn-lg btn-white mb8 mt-xs-24" href="/core-and-explore.html">READ NOW</a>
 		                </div>
 		            </div>
 		            
