--- a/core-and-explore.html
+++ b/core-and-explore.html
@@ -166,8 +166,8 @@
 		        <div class="container">
 		            <div class="row">
 		                <div class="col-sm-12 text-center">
-		                    <h3 class="mb0 inline-block p32 p0-xs">Up next: What are OKRs</h3>
-		                    <a class="btn btn-lg btn-white mb8 mt-xs-24" href="#">Read Now</a>
+		                    <h3 class="mb0 inline-block p32 p0-xs">Up next: Resources</h3>
+		                    <a class="btn btn-lg btn-white mb8 mt-xs-24" href="/resources.html">Read Now</a>
 		                </div>
 		            </div>
 		            
