--- a/history-of-okrs.html
+++ b/history-of-okrs.html
@@ -171,7 +171,7 @@
 		            <div class="row">
 		                <div class="col-sm-12 text-center">
 		                    <h3 class="mb0 inline-block p32 p0-xs">Up next: What are OKRs</h3>
-		                    <a class="btn btn-lg btn-white mb8 mt-xs-24" href="#">Read Now</a>
+		                    <a class="btn btn-lg btn-white mb8 mt-xs-24" href="/what-are-okrs.html">Read Now</a>
 		                </div>
 		            </div>
 		            
