--- a/resources.html
+++ b/resources.html
@@ -429,7 +429,7 @@
 		            <div class="row">
 		                <div class="col-sm-12 text-center">
 		                    <h3 class="mb0 inline-block p32 p0-xs">Up next: OKR Books</h3>
-		                    <a class="btn btn-lg btn-white mb8 mt-xs-24" href="#how-to-make-okrs-actually-work-at-your-startup">BRowse LIBRARY</a>
+		                    <a class="btn btn-lg btn-white mb8 mt-xs-24" href="#">BRowse LIBRARY</a>
 		                </div>
 		            </div>
 		            
